--- a/blast.html
+++ b/blast.html
@@ -16,7 +16,7 @@
 
 			<!-- Header -->
 				<header id="header">
-					<h1><a href="index.html">Ethan Degen's Portfolio</a></h1>
+					<h1><a href="index.html">Ethan Degen Game Designer</a></h1>
 					<nav id="nav">
 						<ul>
 							<li><a href="index.html">Home</a></li>
@@ -28,6 +28,9 @@
 									<li><a href="winter.html">Winter Scene</a></li>
 								</ul>
 							</li>
+							<li><a href="resume.html">Resume</a></li>
+							<li><a href="contact.html">Contact</a></li>
+							<li><a href="https://www.linkedin.com/in/ethandegen/">Linkedin</a></li>
 						</ul>
 					</nav>
 				</header>
@@ -92,8 +95,8 @@
 						</div>
 					</div>
 					<div class="box alt">
+						<h3>Gallery</h3>
 						<div class="row gtr-50 gtr-uniform">
-							
 							<div class="col-4"><span class="image fit"><a href="images/BlastMotorpool1.png"><img src="images/BlastMotorpool1.png" alt="" style="width:400px;height:200px"></a></span></div>
 							<div class="col-4"><span class="image fit"><a href="images/BlastMotorpool2.png"><img src="images/BlastMotorpool2.png" alt="" style="width:400px;height:200px"></a></span></div>
 							<div class="col-4"><span class="image fit"><a href="images/BlastMotorpool3.png"><img src="images/BlastMotorpool3.png" alt="" style="width:400px;height:200px"></a></span></div>
