--- a/contact.html
+++ b/contact.html
@@ -16,13 +16,14 @@
 
 			<!-- Header -->
 				<header id="header">
-					<h1><a href="index.html">Ethan Degen Game Designer</a></h1>
+					<h1><a href="index.html">Ethan Degen Programmer</a></h1>
 					<nav id="nav">
 						<ul>
 							<li><a href="index.html">Home</a></li>
 							<li>
 								<a href="#" class="icon solid fa-angle-down">Projects</a>
 								<ul>
+									<li><a href="arma.html">17th Aux Mod</a></li>
 									<li><a href="blast.html">B.L.A.S.T.</a></li>
 									<li><a href="turningpoint.html">Turning Point</a></li>
 									<li><a href="winter.html">Winter Scene</a></li>
