--- a/blast.html
+++ b/blast.html
@@ -74,18 +74,18 @@
 					<div class="box alt">
 						<h3>Gallery</h3>
 						<div class="row gtr-50 gtr-uniform">
-							<div class="col-4"><span class="image fit"><a href="images/BlastMotorpool1.png"><img src="images/BlastMotorpool1.png" alt="" style="width:400px;height:200px"></a></span></div>
-							<div class="col-4"><span class="image fit"><a href="images/BlastMotorpool2.png"><img src="images/BlastMotorpool2.png" alt="" style="width:400px;height:200px"></a></span></div>
-							<div class="col-4"><span class="image fit"><a href="images/BlastMotorpool3.png"><img src="images/BlastMotorpool3.png" alt="" style="width:400px;height:200px"></a></span></div>
-							<div class="col-4"><span class="image fit"><a href="images/BlastMotorpool4.png"><img src="images/BlastMotorpool4.png" alt="" style="width:400px;height:200px"></a></span></div>
-							<div class="col-4"><span class="image fit"><a href="images/BlastMotorpool5.png"><img src="images/BlastMotorpool5.png" alt="" style="width:400px;height:200px"></a></span></div>
-							<div class="col-4"><span class="image fit"><a href="images/BlastMotorpool6.png"><img src="images/BlastMotorpool6.png" alt="" style="width:400px;height:200px"></a></span></div>
-							<div class="col-4"><span class="image fit"><a href="images/BlastShipping1.png"><img src="images/BlastShipping1.png" alt="" style="width:400px;height:200px"></a></span></div>
-							<div class="col-4"><span class="image fit"><a href="images/BlastShipping2.png"><img src="images/BlastShipping2.png" alt="" style="width:400px;height:200px"></a></span></div>
-							<div class="col-4"><span class="image fit"><a href="images/BlastShipping3.png"><img src="images/BlastShipping3.png" alt="" style="width:400px;height:200px"></a></span></div>
-							<div class="col-4"><span class="image fit"><a href="images/BlastShipping4.png"><img src="images/BlastShipping4.png" alt="" style="width:400px;height:200px"></a></span></div>
-							<div class="col-4"><span class="image fit"><a href="images/BlastShippingOverview.png"><img src="images/BlastShippingOverview.png" alt="" style="width:400px;height:200px"></a></span></div>
-							<div class="col-4"><span class="image fit"><a href="images/BlastMotorpoolOverview.png"><img src="images/BlastMotorpoolOverview.png" alt="" style="width:400px;height:200px"></a></span></div>
+							<div class="col-4"><span class="image fit"><a href="images/BlastMotorpool1.png"><img src="images/BlastMotorpool1.png" alt="" style="width:100%;height:100%"></a></span></div>
+							<div class="col-4"><span class="image fit"><a href="images/BlastMotorpool2.png"><img src="images/BlastMotorpool2.png" alt="" style="width:100%;height:100%"></a></span></div>
+							<div class="col-4"><span class="image fit"><a href="images/BlastMotorpool3.png"><img src="images/BlastMotorpool3.png" alt="" style="width:100%;height:100%"></a></span></div>
+							<div class="col-4"><span class="image fit"><a href="images/BlastMotorpool4.png"><img src="images/BlastMotorpool4.png" alt="" style="width:100%;height:100%"></a></span></div>
+							<div class="col-4"><span class="image fit"><a href="images/BlastMotorpool5.png"><img src="images/BlastMotorpool5.png" alt="" style="width:100%;height:100%"></a></span></div>
+							<div class="col-4"><span class="image fit"><a href="images/BlastMotorpool6.png"><img src="images/BlastMotorpool6.png" alt="" style="width:100%;height:100%"></a></span></div>
+							<div class="col-4"><span class="image fit"><a href="images/BlastShipping1.png"><img src="images/BlastShipping1.png" alt="" style="width:100%;height:100%"></a></span></div>
+							<div class="col-4"><span class="image fit"><a href="images/BlastShipping2.png"><img src="images/BlastShipping2.png" alt="" style="width:100%;height:100%"></a></span></div>
+							<div class="col-4"><span class="image fit"><a href="images/BlastShipping3.png"><img src="images/BlastShipping3.png" alt="" style="width:100%;height:100%"></a></span></div>
+							<div class="col-4"><span class="image fit"><a href="images/BlastShipping4.png"><img src="images/BlastShipping4.png" alt="" style="width:100%;height:100%"></a></span></div>
+							<div class="col-4"><span class="image fit"><a href="images/BlastShippingOverview.png"><img src="images/BlastShippingOverview.png" alt="" style="width:100%;height:100%"></a></span></div>
+							<div class="col-4"><span class="image fit"><a href="images/BlastMotorpoolOverview.png"><img src="images/BlastMotorpoolOverview.png" alt="" style="width:100%;height:100%"></a></span></div>
 						</div>
 					</div>
 				</section>
