--- a/blast.html
+++ b/blast.html
@@ -24,6 +24,7 @@
 								<a href="#" class="icon solid fa-angle-down">Projects</a>
 								<ul>
 									<li><a href="arma.html">17th Aux Mod</a></li>
+                                    <li><a href="tabor.html">Ghosts of Tabor</a></li>
 									<li><a href="blast.html">B.L.A.S.T.</a></li>
 									<li><a href="turningpoint.html">Turning Point</a></li>
 									<li><a href="winter.html">Winter Scene</a></li>
@@ -44,6 +45,18 @@
 					</header>
 					<div class="box">
 						<span class="image featured"><img src="images/BlastPoster.png" alt="" /></span>
+						<h3>Summary of my Work</h3>
+						<ol>
+							<li>Lead 12 engineers in the design and implementation of all gameplay systems and level design</li>
+
+							<li>Made 60% of the map from 2D paper block-outs to creation in Unreal and implemented the gameplay encounters and mechanics in the game after they were created</li>
+								
+							<li>Designed and implemented our AI and Zone System that split the map up into zones that we could resize at will and 
+								keep track of where the players are on the map and make sure the zone they're in along with adjacent zones are populated with enemies</li>
+						
+							<li>Created a power-up system that the player would use to modify their weapon on the fly which allowed engineers to create
+								new weapons and implement them easily as power-ups for the player to find and use</li>
+						</ol>
 						<h3>What is B.L.A.S.T.</h3>
 						<p>
 							Blast is a pitch for the 2022 senior project; a group of artists and programmers were tasked with creating a game in 16 months. Its acronym stood for Bullet, Laser, Alien, Snake, Taco, and was pitched as a single-player roguelike fps inspired by games like Doom and Gunfire Reborn. 
