--- a/blast.html
+++ b/blast.html
@@ -23,6 +23,7 @@
 							<li>
 								<a href="#" class="icon solid fa-angle-down">Projects</a>
 								<ul>
+                                    <li><a href="eso.html">Elder Scrolls Online</a></li>
                                     <li><a href="tabor.html">Ghosts of Tabor</a></li>
 									<li><a href="blast.html">B.L.A.S.T.</a></li>
 									<li><a href="arma.html">17th Aux Mod</a></li>
